# flutter-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NOTICES.txt  README.md
cmake/: compiler.cmake  options.cmake  packaging.cmake
example/: CMakeLists.txt  main.cc
example/plugins/pigeon/: CMakeLists.txt  README.md  messages.g.cc  messages.g.h  pigeon_api_plugin.h  pigeon_api_plugin_c_api.cc
example/plugins/pigeon/include/pigeon_api/: pigeon_api_plugin_c_api.h
example/plugins/video_player/: CMakeLists.txt  README.md  messages.g.cc  messages.g.h  video_player_plugin.cc  video_player_plugin.h  video_player_plugin_c_api.cc
example/plugins/video_player/include/video_player/: video_player_plugin_c_api.h
patches/: 0001-Linux-compat-for-event_channel.h.patch  0001-Support-Linux.patch
plugins/: CMakeLists.txt
plugins/cloud_firestore/: CMakeLists.txt  cloud_firestore_plugin.cc  cloud_firestore_plugin.h  cloud_firestore_plugin_c_api.cc  firestore_codec.cc  messages.g.cc  messages.g.h  plugin_version.h.in
plugins/firebase_auth/: CMakeLists.txt  README.md  firebase_auth_plugin.cc  firebase_auth_plugin.h  firebase_auth_plugin_c_api.cc  messages.g.cc  messages.g.h  plugin_version.h.in
plugins/firebase_auth/include/firebase_auth/: firebase_auth_plugin_c_api.h
plugins/firebase_core/: CMakeLists.txt  README.md  firebase_core_plugin.cc  firebase_core_plugin_c_api.cc
plugins/firebase_storage/: CMakeLists.txt  README.md  firebase_storage_plugin.cc  firebase_storage_plugin.h  firebase_storage_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/firebase_storage/include/firebase_storage/: firebase_storage_plugin_c_api.h
plugins/pigeon/: messages.g.cc  messages.g.h  pigeon_api_plugin.h  pigeon_api_plugin_c_api.cc
plugins/pigeon/include/pigeon_api/: pigeon_api_plugin_c_api.h
plugins/video_player/: CMakeLists.txt  README.md  messages.g.cc  messages.g.h  video_player_plugin.h  video_player_plugin_c_api.cc
plugins/video_player/include/video_player/: video_player_plugin_c_api.h
src/shell/platform/desktop/: CMakeLists.txt  desktop_event_loop.cc  desktop_event_loop.h  event_loop.cc  event_loop.h  flutter_desktop.cc  headless_event_loop.cc  headless_event_loop.h  key_event_handler.cc  key_event_handler.h  keyboard_hook_handler.h  libflutter_engine.cc  libflutter_engine.h  platform_handler.cc  platform_handler.h  shared_library.h  system_utils.cc  system_utils.h  system_utils_test.cc  text_input_plugin.cc  text_input_plugin.h
src/shell/platform/desktop/client_wrapper/: flutter_engine.cc  flutter_window_controller.cc  flutter_window_unittests.cc
src/shell/platform/desktop/client_wrapper/include/flutter/: flutter_engine.h  flutter_window.h  flutter_window_controller.h  plugin_registrar_desktop.h
src/shell/platform/desktop/client_wrapper/testing/: stub_flutter_desktop_api.cc  stub_flutter_desktop_api.h  stub_flutter_wayland_api.cc  stub_flutter_wayland_api.h
src/shell/platform/desktop/public/: flutter_desktop.h
