add_subdirectory(pigeon)
add_subdirectory(video_player)

if (BUILD_PLUGIN_FIREBASE_CORE)
    add_subdirectory(firebase_core)
endif ()
if (BUILD_PLUGIN_FIREBASE_AUTH)
    add_subdirectory(firebase_auth)
endif ()
if (BUILD_PLUGIN_FIREBASE_STORAGE)
    add_subdirectory(firebase_storage)
endif ()
if (BUILD_PLUGIN_CLOUD_FIRESTORE)
    add_subdirectory(cloud_firestore)
endif ()
